[package]
name = "vicmil_compiler"
version = "0.1.0"
authors = ["vnomarrow <vnomarrow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trait_enum = "0.5.0"
cranelift = "0.69.0"
cranelift-module = "0.69.0"
cranelift-jit = "0.69.0"
peg = "0.6"
